--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,8 +2,10 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/header_one.jpg
-  title: first banner image
+- src: landing/header-01.jpg
+  title: # first banner image
 
-- src: landing/header_two.jpg
-  title: second banner image
+- src: landing/header-02.jpg
+  title: # second banner image
+
+- src: landing/header-03.jpg
