--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,12 @@
 title: Low 室
 description: 斯是Low室，惟吾德Shine.
 keywords: blog,Jekyll,github,gh-pages
-host: 0.0.0.0
+host: 0.0.0.0  # Mx Add
 baseurl:  "" # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: http://lowshi.com  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
+permalink: /:categories/:title:output_ext  # Mx Add
 
 # author -- index page "about me" section
 author:  # change following line to your infomation.
