--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -28,7 +28,7 @@
   i18n: nav.blog
   name: Blog
   tpl: blog.html
-  page: post/
+  page: blog/  # navbar
   css: testimonials navy-section
 
 - id: links
