--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:  # change following line to your infomation.
   name: 孟想  # Be used at blog posts' author.
   first_name: 孟  # Be used at index page about me section.
   last_name: 想  # Be used at index page about me section.
-  avatar: http://www.gravatar.com/avatar/e07931af1a9cbc90b0c3610ecfc5f2a6.png?s=180  # upload your avatar at directory and edit it.
+  avatar: https://www.gravatar.com/avatar/e07931af1a9cbc90b0c3610ecfc5f2a6.png?s=180  # upload your avatar at directory and edit it.
   github_username: mlkey  # Leave blank if you don't have now
   linkedin_id:  # Leave blank if you don't have now
   facebook_username: mlkey  # Leave blank if you don't have now
